View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023794 | Open CASCADE | OCCT:Data Exchange | public | 2013-02-25 11:36 | 2014-02-07 14:06 |
Reporter | ika | Assigned To | ika | ||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Platform | A | OS | L | ||
Product Version | 6.5.4 | ||||
Target Version | 6.6.0 | Fixed in Version | 6.6.0 | ||
Summary | 0023794: Too small precision leads to instability | ||||
Description | Too small precision tol2(10^-36) in line if( devia>tol2 || (dist2-dist)>dPreci || ddist>1.e-3*step ) in file ShapeConstruct_ProjectCurveOnSurface.cxx in function ApproxPCurve leads to different results on Windows and Mandriva2010 | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
tol2 (10^-36) was changed to dPreci (10^-18) Branch CR23794 is ready to be reviewed. Dear GKA, Please review. |
|
Branch CR23794 is ready to test |
|
Dear BugMaster, Branch CR23794 (and products from GIT master) was compiled on Linux and Windows platforms and tested. SHA-1: fdf64b9d9d77972d141931a283df241db8cc32ea Number of compiler warnings: occt component : Linux: 3 (3 on master) Windows: 39 (39 on master) products component : Linux: 9 (9 on master) Windows: 50 (50 on master) Regressions: http://occt-tests/CR23794-master-occt/Windows-32-VC9/summary.html bugs modalg_2 (007) bug453_2 - New value of area (only on Windows) bugs heal(017) bug210 - checkshape Improvements: No improvements Testing cases: Not needed Testing on Linux: Total MEMORY difference: 239545808 / 239512028 Total CPU difference: 19242.310000000776 / 16118.16999999981 Testing on Windows: Total MEMORY difference: 343571716 / 343334684 Total CPU difference: 15184.828125 / 16592.875 There are not serious differences in images found by testdiff. |
|
bugs modalg_2 bug453_2: it fails not only on branch with this fix, but on master, without one too(please check it). bugs heal bug210: incident, which leads to checkshape error in this test has not been detected before fix, although it existed, so test case was changed by adding TODO(now this test should be BAD), and pushed into Branch CR23794. |
|
Dear BugMaster, This fix is TESTED. |
occt: master 9b308cd3 2013-03-07 09:21:34 Details Diff |
0023794: Too small precision leads to instability tol2 (10^-36) was changed to dPreci (10^-18) test case was changed by adding TODO |
Affected Issues 0023794 |
|
mod - src/ShapeConstruct/ShapeConstruct_ProjectCurveOnSurface.cxx | Diff File | ||
mod - tests/bugs/heal/bug210 | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2013-02-25 11:36 | ika | New Issue | |
2013-02-25 11:36 | ika | Assigned To | => ika |
2013-02-25 12:42 | ika | Note Added: 0023471 | |
2013-02-25 12:42 | ika | Assigned To | ika => gka |
2013-02-25 12:42 | ika | Status | new => resolved |
2013-02-25 12:43 |
|
Status | resolved => reviewed |
2013-02-25 12:44 |
|
Note Added: 0023472 | |
2013-02-26 17:56 | ika | Relationship added | parent of 0023439 |
2013-02-27 19:53 |
|
Assigned To | gka => mkv |
2013-02-28 12:27 |
|
Note Added: 0023520 | |
2013-02-28 12:28 |
|
Test case number | => Not needed |
2013-02-28 12:28 |
|
Assigned To | mkv => ika |
2013-02-28 12:28 |
|
Status | reviewed => assigned |
2013-03-01 15:21 | ika | Note Added: 0023551 | |
2013-03-01 15:21 | ika | Assigned To | ika => mkv |
2013-03-01 15:21 | ika | Status | assigned => feedback |
2013-03-01 15:42 | ika | Note Edited: 0023551 | |
2013-03-01 17:00 |
|
Note Added: 0023552 | |
2013-03-01 17:00 |
|
Assigned To | mkv => bugmaster |
2013-03-01 17:00 |
|
Status | feedback => tested |
2013-03-11 17:38 | ika | Changeset attached | => occt master 9b308cd3 |
2013-03-11 17:38 | ika | Assigned To | bugmaster => ika |
2013-03-11 17:38 | ika | Status | tested => verified |
2013-03-11 17:38 | ika | Resolution | open => fixed |
2013-04-23 13:35 |
|
Status | verified => closed |
2013-04-29 15:23 |
|
Fixed in Version | => 6.6.0 |