0023794: Too small precision leads to instability tol2 (10^-36) was changed to dPreci (10^-18) test case was changed by adding TODO